added fully-connected evaluation

--- a/notebooks/24012024-backbone-CLtrain-resnet.ipynb
+++ b/notebooks/24012024-backbone-CLtrain-resnet.ipynb
@@ -26,6 +26,7 @@
     "from pathlib import Path\n",
     "from pprint import pprint\n",
     "from tqdm import tqdm\n",
+    "from itertools import combinations, product\n",
     "\n",
     "from byol_pytorch import BYOL\n",
     "from torch import nn\n",
@@ -35,7 +36,7 @@
     "from torch.utils.data import WeightedRandomSampler\n",
     "\n",
     "# custom imports\n",
-    "from fairface_classification import data, utils\n",
+    "from fairface_classification import data, utils, metrics, resnet_model\n",
     "\n",
     "utils.set_random_seed(42)\n",
     "sns.set_style('whitegrid')\n",
@@ -414,8 +415,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import combinations, product\n",
-    "\n",
     "age_interest = range(2, 6)\n",
     "\n",
     "def compute_cosine_similarity(a, b):\n",
@@ -573,11 +572,12 @@
     }
    ],
    "source": [
+    "cosine_check = False\n",
     "utils.create_models_dir()\n",
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "resnet = resnet.to(device)\n",
+    "resnet = resnet_model.FairFaceResNet(resnet).to(device)\n",
     "\n",
     "learner = BYOL(\n",
     "    resnet,\n",
@@ -605,17 +605,28 @@
     "        pbar.set_description(f\"epoch: {epoch}, loss: {loss.item()}\")\n",
     "\n",
     "        running_loss += loss.item()\n",
+    "        break\n",
     "\n",
     "    # Print the average loss for the epoch\n",
     "    average_loss = running_loss / len(train_loader)\n",
     "    print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {average_loss:.4f}\")\n",
     "\n",
     "    \n",
-    "    features, sims = compute_difference(test_loader, resnet, age_interest)\n",
-    "    fig, ax = build_cosine_hist(sims)\n",
+    "    if cosine_check:\n",
+    "        features, sims = compute_difference(test_loader, resnet, age_interest)\n",
+    "        fig, ax = build_cosine_hist(sims)\n",
+    "    else:\n",
+    "        train_metrics = metrics.calc_measures(resnet, train_loader, device)\n",
+    "        test_metrics = metrics.calc_measures(resnet, test_loader, device)\n",
+    "\n",
+    "        print(f'Train metrics')\n",
+    "        display(train_metrics)\n",
+    "        print(f'Test metrics')\n",
+    "        display(test_metrics)\n",
+    "        \n",
     "\n",
     "# save your improved network\n",
-    "torch.save(resnet.state_dict(), '../models/improved-net.pt')"
+    "torch.save(resnet.state_dict(), '../models/improved-net.pt')\n"
    ]
   },
   {
